レスポンシブ

--- a/voice.html
+++ b/voice.html
@@ -82,6 +82,15 @@
         ]
       }
     </script>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.css" />
+
     <!-- CSS -->
     <link rel="stylesheet" href="./style.css" />
   </head>
@@ -205,8 +214,11 @@
 
         <!-- 固定 -->
         <div class="fixed">
-
-          <a href="https://line.me/R/ti/p/@420zidsx?oat_content=url" class="line">LINE相談</a>
+          <a
+            href="https://line.me/R/ti/p/@420zidsx?oat_content=url"
+            class="line"
+            >LINE相談</a
+          >
 
           <div class="hamburger_fixed">
             <div class="hamburger_toggle">
@@ -215,7 +227,6 @@
               <span></span>
             </div>
           </div>
-
         </div>
         <!--  -->
       </nav>
@@ -236,7 +247,7 @@
 
           <ul class="list">
             <li>
-              <img src="img/voice-1.png" alt=""  class="fadein"/>
+              <img src="img/voice-1.png" alt="" class="fadein" />
               <p class="text-1">2023年4月入会</p>
               <p class="text-2">
                 マンツーマン授業で、疑問を一緒に解決してもらえるだけでなく、自分で調べたり考える力もついたと思います。
@@ -244,7 +255,7 @@
               <p class="small">N・Yさん｜30歳｜会社員</p>
             </li>
             <li>
-              <img src="img/before-after-2.png" alt="" class="fadein"/>
+              <img src="img/before-after-2.png" alt="" class="fadein" />
               <p class="text-1">2023年5月入会</p>
               <p class="text-2">
                 プログラミングは全くの未経験でしたが、短期間で自分でWebサイトを作れるようになりました。
@@ -252,7 +263,7 @@
               <p class="small">K・Hさん｜20代｜専業主婦</p>
             </li>
             <li>
-              <img src="img/before-after-3.png" alt="" class="fadein"/>
+              <img src="img/before-after-3.png" alt="" class="fadein" />
               <p class="text-1">2023年8月入会</p>
               <p class="text-2">
                 副業からフリーランスになりたいと思って入会。初心者の僕でも挫折せず挫折せずに進められました。
@@ -269,7 +280,10 @@
             <li class="meetup">
               <div class="left">
                 <h3 class="section-title">
-                  <span class="yellow">第１回</span>プロナビオフ会<span class="small">Meetup</span>
+                  <span class="yellow">第１回</span>プロナビオフ会<span
+                    class="small"
+                    >Meetup</span
+                  >
                 </h3>
                 <p class="text">開催地：名古屋<br />参加人数：　人</p>
               </div>
@@ -284,7 +298,10 @@
             <li class="meetup">
               <div class="left">
                 <h3 class="section-title">
-                  <span class="yellow">第２回</span>プロナビオフ会<span class="small">Meetup</span>
+                  <span class="yellow">第２回</span>プロナビオフ会<span
+                    class="small"
+                    >Meetup</span
+                  >
                 </h3>
                 <p class="text">開催地：名古屋<br />参加人数：　人</p>
               </div>
@@ -299,7 +316,10 @@
             <li class="meetup">
               <div class="left">
                 <h3 class="section-title">
-                  <span class="yellow">第３回</span>プロナビオフ会<span class="small">Meetup</span>
+                  <span class="yellow">第３回</span>プロナビオフ会<span
+                    class="small"
+                    >Meetup</span
+                  >
                 </h3>
                 <p class="text">開催地：名古屋<br />参加人数：　人</p>
               </div>
@@ -320,28 +340,28 @@
 
           <ul class="list">
             <li>
-              <img src="img/metaleaf-1.png" alt="" class="fadein"/>
+              <img src="img/metaleaf-1.png" alt="" class="fadein" />
               <p class="text">
                 フリースペース <span>気軽に話せる仲間が集まれる場所。</span>
               </p>
             </li>
 
             <li>
-              <img src="img/metaleaf-2.png" alt="" class="fadein"/>
+              <img src="img/metaleaf-2.png" alt="" class="fadein" />
               <p class="text">
                 毎週月曜のセミナー <span>新しい発見や刺激が見つかる場所。</span>
               </p>
             </li>
 
             <li>
-              <img src="img/metaleaf-3.png" alt="" class="fadein"/>
+              <img src="img/metaleaf-3.png" alt="" class="fadein" />
               <p class="text">
                 初心者専用部屋 <span>先輩が優しく声をかけてくれる場所。</span>
               </p>
             </li>
 
             <li>
-              <img src="img/metaleaf-4.png" alt="" class="fadein"/>
+              <img src="img/metaleaf-4.png" alt="" class="fadein" />
               <p class="text">
                 モクモクブース <span>静かに集中したい人のための場所。</span>
               </p>
@@ -367,6 +387,87 @@
               <div><img src="img/hackathon-1.png" alt="Meetup6" /></div>
             </div>
           </div>
+        </div>
+      </section>
+
+      <section id="works" class="flip-slider">
+        <div class="wrapper">
+          <h2 class="section-title">生徒の制作実績</h2>
+          <span class="section-title-deco">works</span>
+        </div>
+        <div class="wrapper">
+          <div class="flip-slider__inner js-flip-slider">
+            <a
+              href="https://pronavi-board.noe-p.com/%e7%be%8e%e5%ae%b9%e3%82%a8%e3%82%b9%e3%83%86%e3%82%b5%e3%83%ad%e3%83%b3%e3%81%aehp/">
+              <div class="slider-inner">
+                <div class="front">
+                  <img src="img/works/1-front.png" alt="works1-front" />
+                </div>
+                <div class="back">
+                  <img src="img/works/1-back.png" alt="works1-back" />
+                </div>
+              </div>
+            </a>
+
+            <a href="https://quietkg.shop/">
+              <div class="slider-inner">
+                <div class="front">
+                  <img src="img/works/2-front.png" alt="works2-front" />
+                </div>
+                <div class="back">
+                  <img src="img/works/2-back.png" alt="works2-back" />
+                </div>
+              </div>
+            </a>
+
+            <a href="https://takerunakase.github.io/Trattoria-Verde/">
+              <div class="slider-inner">
+                <div class="front">
+                  <img src="img/works/3-front.png" alt="works3-front" />
+                </div>
+                <div class="back">
+                  <img src="img/works/3-back.png" alt="works3-back" />
+                </div>
+              </div>
+            </a>
+
+            <a
+              href="https://yuta-swallows.github.io/tokyo-thundards-goods-site/">
+              <div class="slider-inner">
+                <div class="front">
+                  <img src="img/works/4-front.png" alt="works4-front" />
+                </div>
+                <div class="back">
+                  <img src="img/works/4-back.png" alt="works4-back" />
+                </div>
+              </div>
+            </a>
+
+            <a href="https://ryotasogawa.github.io/originalsitte/">
+              <div class="slider-inner">
+                <div class="front">
+                  <img src="img/works/5-front.png" alt="works5-front" />
+                </div>
+                <div class="back">
+                  <img src="img/works/5-back.png" alt="works5-back" />
+                </div>
+              </div>
+            </a>
+
+            <a href="https://chimoe166.github.io/-LP/">
+              <div class="slider-inner">
+                <div class="front">
+                  <img src="img/works/6-front.png" alt="works6-front" />
+                </div>
+                <div class="back">
+                  <img src="img/works/6-back.png" alt="works6-back" />
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="wrapper viewmore">
+          <a href="https://pronavi-board.noe-p.com/">View More ></a>
         </div>
       </section>
     </main>
