--- a/index.html
+++ b/index.html
@@ -485,9 +485,10 @@
           </p>
           <a href="#" class="teacher_more_button">
             <img src="img/top_underline_deco.png" class="underline" alt="message_deco" />
-            <span>more</span></a>
-
+            <span>more</span>
+          </a>
         </li>
+
         <li class="items">
           <img src="img/top_teacher2.png" class="pic" alt="teacher_pic2" />
           <span class="position">現役エンジニア講師</span>
@@ -497,7 +498,8 @@
           </p>
           <a href="#" class="teacher_more_button">
             <img src="img/top_underline_deco.png" class="underline" alt="message_deco" />
-            <span>more</span></a>
+            <span>more</span>
+          </a>
         </li>
 
         <li class="items">
@@ -509,7 +511,8 @@
           </p>
           <a href="#" class="teacher_more_button">
             <img src="img/top_underline_deco.png" class="underline" alt="message_deco" />
-            <span>more</span></a>
+            <span>more</span>
+          </a>
         </li>
 
         <li class="items">
@@ -521,9 +524,9 @@
           </p>
           <a href="#" class="teacher_more_button">
             <img src="img/top_underline_deco.png" class="underline" alt="message_deco" />
-            <span>more</span></a>
+            <span>more</span>
+          </a>
         </li>
-        
       </ul>
     </section>
 
@@ -884,7 +887,6 @@
       </a>
     </div>
   </footer>
-
   <!-- js -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
