--- a/about.html
+++ b/about.html
@@ -204,7 +204,7 @@
   <main>
     <section id="fv" class="wrapper">
       <span class="section-title__en">SCHOOL</span>
-      <h2 class="section-title flex-left fadein">スクール概要</h2>
+      <h2 class="section-title flex-left fadein2">スクール概要</h2>
     </section>
 
     <section id="moya" class="wrapper inner">
