--- a/voice.html
+++ b/voice.html
@@ -223,8 +223,8 @@
 
     <main>
       <section id="voice-fv" class="wrapper voice-fv">
-        <span class="section-title__en fadein">VOICE</span>
-        <h2 class="section-title flex-left">生徒の声</h2>
+        <span class="section-title__en">VOICE</span>
+        <h2 class="section-title flex-left fadein">生徒の声</h2>
       </section>
 
       <section class="voice">
