--- a/company.html
+++ b/company.html
@@ -77,12 +77,11 @@
 <body class="company">
   <header>
     <h1>
-      <a href="index.html"><img src="img/logo.png" alt="logo" class="logo" /></a>
+      <a href="index.html"><img src="img/logo.png" alt="" class="logo" /></a>
     </h1>
-
+  
     <div class="menu-bg"></div>
     <nav class="hamburger-menu">
-
       <div class="company">
         <h2 class="active-logo">
           <a href="index.html"><img src="img/logo.png" alt="" /></a>
@@ -91,117 +90,131 @@
           〒460-0002<br />愛知県名古屋市中区丸の内3丁目15-22<br />丸の内Usビル801号室
         </p>
       </div>
-
+  
       <ul class="menu">
         <li>
           <a href="index.html">
-            <span class="en">top</span>
+            <span class="en">Top</span>
             <span class="ja">トップページ</span>
           </a>
         </li>
         <li>
           <a href="about.html">
-            <span class="en">about</span>
+            <span class="en">About</span>
             <span class="ja">スクールの紹介</span>
           </a>
         </li>
         <li>
           <a href="voice.html">
-            <span class="en">voice</span>
+            <span class="en">Voice</span>
             <span class="ja">受講生の声</span>
           </a>
         </li>
         <li>
           <a href="#">
-            <span class="en">price</span>
+            <span class="en">Price</span>
             <span class="ja">料金</span>
           </a>
         </li>
         <li>
           <a href="#">
-            <span class="en">faq</span>
+            <span class="en">FAQ</span>
             <span class="ja">よくある質問</span>
           </a>
         </li>
         <li>
           <a href="company.html">
-            <span class="en">company</span>
+            <span class="en">Company</span>
             <span class="ja">会社概要</span>
           </a>
         </li>
       </ul>
-
+  
       <ul class="link">
-        <li><a href="https://line.me/R/ti/p/@420zidsx?oat_content=url">公式LINE</a></li>
-        <li><a href="https://pronavi-board.noe-p.com/">PortNavi</a></li>
-        <li><a
+        <li>
+          <a href="https://line.me/R/ti/p/@420zidsx?oat_content=url">公式LINE</a>
+        </li>
+        <li>
+          <a href="https://pronavi-board.noe-p.com/">PortNavi <span>〜受講生の制作物〜</span></a>
+        </li>
+        <li>
+          <a
             href="https://www.instagram.com/kakashi.programming.lab?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img
-              src="img/instgram.png" class="ig">かかし</a></li>
-        <li><a
+              src="img/instgram.png" class="ig" />かかし</a>
+        </li>
+        <li>
+          <a
             href="https://www.instagram.com/iruka.freelance?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img
-              src="img/instgram.png" class="ig">いるか</a></li>
+              src="img/instgram.png" class="ig" />いるか</a>
+        </li>
         <li><a href="https://navigator-of-engineering.com/">運営会社</a></li>
       </ul>
-
     </nav>
-
+  
     <nav class="header-menu">
       <ul class="menu">
         <li>
           <a href="about.html">
-            <span class="en">about</span>
+            <span class="en">About</span>
             <span class="ja">スクールの紹介</span>
           </a>
         </li>
         <li>
           <a href="voice.html">
-            <span class="en">voice</span>
+            <span class="en">Voice</span>
             <span class="ja">受講生の声</span>
           </a>
         </li>
         <li>
           <a href="#">
-            <span class="en">price</span>
+            <span class="en">Price</span>
             <span class="ja">料金</span>
           </a>
         </li>
         <li>
           <a href="#">
-            <span class="en">faq</span>
+            <span class="en">FAQ</span>
             <span class="ja">よくある質問</span>
           </a>
         </li>
         <li>
           <a href="company.html">
-            <span class="en">company</span>
+            <span class="en">Company</span>
             <span class="ja">会社概要</span>
           </a>
         </li>
       </ul>
-
+  
       <!-- 固定 -->
-      <a href="https://line.me/R/ti/p/@420zidsx?oat_content=url" class="line">LINE相談</a>
-
-      <div class="hamburger_fixed">
-        <div class="hamburger_toggle">
-          <span></span>
-          <span></span>
-          <span></span>
+      <div class="fixed">
+  
+        <a href="https://line.me/R/ti/p/@420zidsx?oat_content=url" class="line">LINE相談</a>
+  
+        <div class="hamburger_fixed">
+          <div class="hamburger_toggle">
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
         </div>
+  
       </div>
       <!--  -->
     </nav>
   </header>
-
+  
+  <div class="video-bg">
+    <video src="img/leaf_bg_landscape.mp4" autoplay muted loop playsinline></video>
+  </div>
   <main>
     <section id="fv" class="wrapper">
       <span class="section-title__en">COMPANY</span>
-      <h2 class="section-title flex-left">会社概要</h2>
+      <h2 class="section-title flex-left fadein2">会社概要</h2>
     </section>
 
     <section id="message" class="wrapper">
       <div class="flex-left">
-        <h3 class="box-title">想い</h3>
+        <h3 class="section-title fadein">想い</h3>
         <span>message</span>
       </div>
       <div class="flex-right">
@@ -218,7 +231,7 @@
 
     <section id="member" class="wrapper">
       <div class="flex-left">
-        <h3 class="box-title">運営メンバー</h3>
+        <h3 class="section-title fadein">運営メンバー</h3>
         <span>member</span>
       </div>
       <div class="flex-right">
@@ -250,7 +263,7 @@
 
     <section id="sns" class="wrapper">
       <div class="flex-left">
-        <h3 class="box-title">SNS</h3>
+        <h3 class="section-title fadein">SNS</h3>
         <span>social media</span>
       </div>
       <div class="flex-right">
@@ -279,7 +292,7 @@
 
     <section id="media" class="wrapper">
       <div class="flex-left">
-        <h3 class="box-title">メディア掲載</h3>
+        <h3 class="section-title fadein">メディア掲載</h3>
         <span>media</span>
       </div>
       <div class="flex-right">
@@ -303,7 +316,7 @@
 
     <section id="overview" class="wrapper">
       <div class="flex-left">
-        <h3 class="box-title">会社概要</h3>
+        <h3 class="section-title fadein">会社概要</h3>
         <span>overview</span>
       </div>
       <table class="company-table">
@@ -371,7 +384,9 @@
         <img src="img/footer_icon-chatbot.png" alt="" />
       </a>
   </footer>
-  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   <script src="main.js"></script>
 </body>
 
