--- a/index.html
+++ b/index.html
@@ -71,16 +71,11 @@
 </head>
 
 <body>
-
-  <div id="loading">
-    <img src="img/logo_movie.gif">
-  </div>
-
   <header>
     <h1>
       <a href="index.html"><img src="img/logo.png" alt="" class="logo" /></a>
     </h1>
-
+  
     <div class="menu-bg"></div>
     <nav class="hamburger-menu">
       <div class="company">
@@ -91,7 +86,7 @@
           〒460-0002<br />愛知県名古屋市中区丸の内3丁目15-22<br />丸の内Usビル801号室
         </p>
       </div>
-
+  
       <ul class="menu">
         <li>
           <a href="index.html">
@@ -130,7 +125,7 @@
           </a>
         </li>
       </ul>
-
+  
       <ul class="link">
         <li>
           <a href="https://line.me/R/ti/p/@420zidsx?oat_content=url">公式LINE</a>
@@ -151,7 +146,7 @@
         <li><a href="https://navigator-of-engineering.com/">運営会社</a></li>
       </ul>
     </nav>
-
+  
     <nav class="header-menu">
       <ul class="menu">
         <li>
@@ -185,12 +180,12 @@
           </a>
         </li>
       </ul>
-
+  
       <!-- 固定 -->
       <div class="fixed">
-
+  
         <a href="https://line.me/R/ti/p/@420zidsx?oat_content=url" class="line">LINE相談</a>
-
+  
         <div class="hamburger_fixed">
           <div class="hamburger_toggle">
             <span></span>
@@ -198,12 +193,15 @@
             <span></span>
           </div>
         </div>
-
+  
       </div>
       <!--  -->
     </nav>
   </header>
-
+  <div id="loading">
+    <img src="img/logo_movie.gif">
+  </div>
+  
   <!--鈴木追加  -->
   <div class="video-bg">
     <video src="img/leaf_bg_landscape.mp4" autoplay muted loop playsinline></video>
@@ -874,6 +872,7 @@
           </ul>
         </nav>
       </div>
+      <div class="copy"><small>&copy;COPYRIGHT NOE Co.ltd</small></div>
 
       <a href="#" class="page-top">
         <button>
