--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
 
   <body>
 
-    <div id="loading">
+    <!-- <div id="loading">
       <img src="img/logo_movie.gif">
-    </div>
+    </div> -->
     
     <header>
       <h1>
@@ -270,7 +270,7 @@
             <ul class="purpose-list">
               <li>
                 <a href="#">
-                  <img src="img/purpose-1.png" alt="" />
+                  <img src="img/purpose-1.png" alt="purpose" />
                   <h3 class="box-title">
                     他社との比較<span class="en">Comparison</span>
                   </h3>
@@ -279,7 +279,7 @@
               </li>
               <li>
                 <a href="about.html">
-                  <img src="img/purpose-2.png" alt="" />
+                  <img src="img/purpose-2.png" alt="purpose" />
                   <h3 class="box-title">
                     どんなスクール？<span class="en">School</span>
                   </h3>
@@ -288,7 +288,7 @@
               </li>
               <li>
                 <a href="voice.html">
-                  <img src="img/purpose-3.png" alt="" />
+                  <img src="img/purpose-3.png" alt="purpose" />
                   <h3 class="box-title">
                     案件獲得できる？<span class="en">Lead</span>
                   </h3>
@@ -297,7 +297,7 @@
               </li>
               <li>
                 <a href="#">
-                  <img src="img/purpose-4.png" alt="" />
+                  <img src="img/purpose-4.png" alt="purpose" />
                   <h3 class="box-title">
                     未経験でも大丈夫？<span class="en">Unexperienced</span>
                   </h3>
@@ -315,49 +315,61 @@
         
         <div class="wrapper">
           <h4 class="message">
-            ProNaviで多くの受講生が、<br /><span>“実践的な”</span
+            ProNaviで多くの受講生が、<br /><span class="fadein">“実践的な”</span
             >プログラミングスキル<br />を身につけています。
           </h4>
 
           <ul class="list">
+
             <li>
               <img src="img/before-after-1.png" alt="" class="fadein"/>
-              <p class="middle left">
-                <span class="label fadein">before</span>
-                <span class="text fadein">独学で挫折</span>
-              </p>
-              <p class="middle right">
-                <span class="label fadein">after</span>
-                <span class="text fadein">5ヶ月で初案件獲得</span>
-              </p>
-              <div class="arrow"><img src="img/arrow1.png" alt="" /></div>
-              <p class="small">ちえさん｜30歳｜会社員</p>
+
+              <div class="text-right">
+                <p class="middle left">
+                  <span class="label fadein">before</span>
+                  <span class="text fadein">独学で挫折</span>
+                </p>
+                <p class="middle right">
+                  <span class="label fadein">after</span>
+                  <span class="text fadein">5ヶ月で初案件獲得</span>
+                </p>
+                <div class="arrow"><img src="img/arrow1.png" alt="" /></div>
+                <p class="small">ちえさん｜30歳｜会社員</p>
+              </div>
+
             </li>
+
             <li>
               <img src="img/before-after-2.png" alt="" class="fadein"/>
-              <p class="middle left">
-                <span class="label fadein">before</span>
-                <span class="text fadein">スキルに不安</span>
-              </p>
-              <p class="middle right">
-                <span class="label fadein">after</span>
-                <span class="text fadein">自分の制作で喜ばれるように</span>
-              </p>
-              <div class="arrow"><img src="img/arrow1.png" alt="" /></div>
-              <p class="small">みきさん｜20歳｜専業主婦</p>
+              <div class="text-right">
+
+                <p class="middle left">
+                  <span class="label fadein">before</span>
+                  <span class="text fadein">スキルに不安</span>
+                </p>
+                <p class="middle right">
+                  <span class="label fadein">after</span>
+                  <span class="text fadein">自分の制作で喜ばれるように</span>
+                </p>
+                <div class="arrow"><img src="img/arrow1.png" alt="" /></div>
+                <p class="small">みきさん｜20歳｜専業主婦</p>
+              </div>
             </li>
             <li>
               <img src="img/before-after-3.png" alt="" class="fadein"/>
-              <p class="middle left">
-                <span class="label fadein">before</span>
-                <span class="text fadein">仕事と両立できない</span>
-              </p>
-              <p class="middle right">
-                <span class="label fadein">after</span>
-                <span class="text fadein">毎月安定して収入に</span>
-              </p>
-              <div class="arrow"><img src="img/arrow1.png" alt="" /></div>
-              <p class="small">太郎さん｜30歳｜会社員</p>
+              <div class="text-right">
+
+                <p class="middle left">
+                  <span class="label fadein">before</span>
+                  <span class="text fadein">仕事と両立できない</span>
+                </p>
+                <p class="middle right">
+                  <span class="label fadein">after</span>
+                  <span class="text fadein">毎月安定して収入に</span>
+                </p>
+                <div class="arrow"><img src="img/arrow1.png" alt="" /></div>
+                <p class="small">太郎さん｜30歳｜会社員</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -376,11 +388,11 @@
             <ul class="list">
               <li class="item">
                 <div class="left">
-                  <img src="img/reason-1.png" alt="" />
+                  <img src="img/reason-1.png" alt=""  class="fadein"/>
                 </div>
                 <div class="right">
-                  <h3 class="box-title">コーチング型個別指導</h3>
-                  <p>
+                  <h3 class="box-title fadein">コーチング型個別指導</h3>
+                  <p class="fadein">
                     あなた専属のコーチが毎日伴走。性格診断でマッチング<br />「どこでつまずいているか」「次に何をすべきか」を一緒に整理しながら、一人ひとりのペースで確実に前進できるよう伴走します。
                   </p>
                 </div>
@@ -388,11 +400,11 @@
 
               <li class="item">
                 <div class="left">
-                  <img src="img/reason-2.png" alt="" />
+                  <img src="img/reason-2.png" alt="" class="fadein"/>
                 </div>
                 <div class="right">
-                  <h3 class="box-title">24時間質問対応</h3>
-                  <p>
+                  <h3 class="box-title fadein">24時間質問対応</h3>
+                  <p class="fadein">
                     公式LINEでいつでも質問可能<br />「今すぐ聞きたい！」その気持ち、大切にします。深夜でも早朝でも、あなたの学習リズムに合わせて対応。
                   </p>
                 </div>
@@ -400,11 +412,11 @@
 
               <li class="item">
                 <div class="left">
-                  <img src="img/reason-3.png" alt="" />
+                  <img src="img/reason-3.png" alt="" class="fadein"/>
                 </div>
                 <div class="right">
-                  <h3 class="box-title">案件獲得まで徹底サポート</h3>
-                  <p>
+                  <h3 class="box-title fadein">案件獲得まで徹底サポート</h3>
+                  <p class="fadein">
                     営業同行、実案件での質問対応まで<br />「スキルは身についた。でも営業が不安...」そんなあなたを、案件獲得の瞬間まで完全サポート。
                   </p>
                 </div>
@@ -412,11 +424,11 @@
 
               <li class="item">
                 <div class="left">
-                  <img src="img/reason-4.png" alt="" />
+                  <img src="img/reason-4.png" alt="" class="fadein"/>
                 </div>
                 <div class="right">
-                  <h3 class="box-title">実践重視のカリキュラム</h3>
-                  <p>
+                  <h3 class="box-title fadein">実践重視のカリキュラム</h3>
+                  <p class="fadein">
                     模写コーディングだけでなく、実際の案件を想定<br />「教材はできるけど、実案件は不安...」そのギャップを埋めるのが、私たちのカリキュラム。
                   </p>
                 </div>
@@ -424,11 +436,11 @@
 
               <li class="item">
                 <div class="left">
-                  <img src="img/reason-5.png" alt="" />
+                  <img src="img/reason-5.png" alt="" class="fadein"/>
                 </div>
                 <div class="right">
-                  <h3 class="box-title">卒業後も安心のコミュニティ</h3>
-                  <p>
+                  <h3 class="box-title fadein">卒業後も安心のコミュニティ</h3>
+                  <p class="fadein">
                     卒業生同士の交流、継続学習サポート<br />卒業は終わりじゃない。新しいスタート。仲間と切磋琢磨できる環境で、成長し続けられます。
                   </p>
                 </div>
